LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/GM_CLIENT_ADDR_DTL__x.object-meta.xml
<CustomObject>
    <description>GM_CLIENT_ADDR_DTL</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_CLIENT_ADDR_DTL</externalName>
    <label>GM_CLIENT_ADDR_DTL</label>
    <pluralLabel>GM_CLIENT_ADDR_DTL</pluralLabel>
</CustomObject>