LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/ADDR_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ADDR_TYPE__c</fullName>
    <description>ADDR_TYPE</description>
    <externalDeveloperName>ADDR_TYPE</externalDeveloperName>
    <label>ADDR_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>