LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/ADDRESS2__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS2__c</fullName>
    <description>ADDRESS2</description>
    <externalDeveloperName>ADDRESS2</externalDeveloperName>
    <label>ADDRESS2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>