LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/ADDRESS3__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS3__c</fullName>
    <description>ADDRESS3</description>
    <externalDeveloperName>ADDRESS3</externalDeveloperName>
    <label>ADDRESS3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>