LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS__c</fullName>
    <description>ADDRESS</description>
    <externalDeveloperName>ADDRESS</externalDeveloperName>
    <label>ADDRESS</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>