LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/AREAS_OF_EXPERTISE__c.field-meta.xml
<CustomField>
    <fullName>AREAS_OF_EXPERTISE__c</fullName>
    <description>AREAS_OF_EXPERTISE</description>
    <externalDeveloperName>AREAS_OF_EXPERTISE</externalDeveloperName>
    <label>AREAS_OF_EXPERTISE</label>
    <length>250</length>
    <type>Text</type>
</CustomField>