LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/BOUNCE_COUNT__c.field-meta.xml
<CustomField>
    <fullName>BOUNCE_COUNT__c</fullName>
    <description>BOUNCE_COUNT</description>
    <externalDeveloperName>BOUNCE_COUNT</externalDeveloperName>
    <label>BOUNCE_COUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>