LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/BRD_LINE__c.field-meta.xml
<CustomField>
    <fullName>BRD_LINE__c</fullName>
    <description>BRD_LINE</description>
    <externalDeveloperName>BRD_LINE</externalDeveloperName>
    <label>BRD_LINE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>