LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CAMPAIGN__c.field-meta.xml
<CustomField>
    <fullName>CAMPAIGN__c</fullName>
    <description>CAMPAIGN</description>
    <externalDeveloperName>CAMPAIGN</externalDeveloperName>
    <label>CAMPAIGN</label>
    <length>8</length>
    <type>Text</type>
</CustomField>