LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CHK_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>CHK_EMAIL__c</fullName>
    <description>CHK_EMAIL</description>
    <externalDeveloperName>CHK_EMAIL</externalDeveloperName>
    <label>CHK_EMAIL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>