LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CLIENT_GROUP__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_GROUP__c</fullName>
    <description>CLIENT_GROUP</description>
    <externalDeveloperName>CLIENT_GROUP</externalDeveloperName>
    <label>CLIENT_GROUP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>