LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CLNT_ADDR__c.field-meta.xml
<CustomField>
    <fullName>CLNT_ADDR__c</fullName>
    <description>CLNT_ADDR</description>
    <externalDeveloperName>CLNT_ADDR</externalDeveloperName>
    <label>CLNT_ADDR</label>
    <length>250</length>
    <type>Text</type>
</CustomField>