LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>COMMENTS</description>
    <externalDeveloperName>COMMENTS</externalDeveloperName>
    <label>COMMENTS</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>