LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/COMPANY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_NAME__c</fullName>
    <description>COMPANY_NAME</description>
    <externalDeveloperName>COMPANY_NAME</externalDeveloperName>
    <label>COMPANY_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>