LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CONT_PERSON__c.field-meta.xml
<CustomField>
    <fullName>CONT_PERSON__c</fullName>
    <description>CONT_PERSON</description>
    <externalDeveloperName>CONT_PERSON</externalDeveloperName>
    <label>CONT_PERSON</label>
    <length>200</length>
    <type>Text</type>
</CustomField>