LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CONTACT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_FLAG__c</fullName>
    <description>CONTACT_FLAG</description>
    <externalDeveloperName>CONTACT_FLAG</externalDeveloperName>
    <label>CONTACT_FLAG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>