LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CONTACT_MID__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_MID__c</fullName>
    <description>CONTACT_MID</description>
    <externalDeveloperName>CONTACT_MID</externalDeveloperName>
    <label>CONTACT_MID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>