LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CONTACT_TEAM__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_TEAM__c</fullName>
    <description>CONTACT_TEAM</description>
    <externalDeveloperName>CONTACT_TEAM</externalDeveloperName>
    <label>CONTACT_TEAM</label>
    <length>1</length>
    <type>Text</type>
</CustomField>