LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <description>COUNTRY</description>
    <externalDeveloperName>COUNTRY</externalDeveloperName>
    <label>COUNTRY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>