LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CUSTOM_FIELD1__c.field-meta.xml
<CustomField>
    <fullName>CUSTOM_FIELD1__c</fullName>
    <description>CUSTOM_FIELD1</description>
    <externalDeveloperName>CUSTOM_FIELD1</externalDeveloperName>
    <label>CUSTOM_FIELD1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>