LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/CUSTOM_FIELD2__c.field-meta.xml
<CustomField>
    <fullName>CUSTOM_FIELD2__c</fullName>
    <description>CUSTOM_FIELD2</description>
    <externalDeveloperName>CUSTOM_FIELD2</externalDeveloperName>
    <label>CUSTOM_FIELD2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>