LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/DESGN__c.field-meta.xml
<CustomField>
    <fullName>DESGN__c</fullName>
    <description>DESGN</description>
    <externalDeveloperName>DESGN</externalDeveloperName>
    <label>DESGN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>