LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/DESIGN__c.field-meta.xml
<CustomField>
    <fullName>DESIGN__c</fullName>
    <description>DESIGN</description>
    <externalDeveloperName>DESIGN</externalDeveloperName>
    <label>DESIGN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>