LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/DRCT_LINE__c.field-meta.xml
<CustomField>
    <fullName>DRCT_LINE__c</fullName>
    <description>DRCT_LINE</description>
    <externalDeveloperName>DRCT_LINE</externalDeveloperName>
    <label>DRCT_LINE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>