LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/DS_CHECK__c.field-meta.xml
<CustomField>
    <fullName>DS_CHECK__c</fullName>
    <description>DS_CHECK</description>
    <externalDeveloperName>DS_CHECK</externalDeveloperName>
    <label>DS_CHECK</label>
    <length>2</length>
    <type>Text</type>
</CustomField>