LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EA_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>EA_CONTACT__c</fullName>
    <description>EA_CONTACT</description>
    <externalDeveloperName>EA_CONTACT</externalDeveloperName>
    <label>EA_CONTACT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>