LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EA_EMAILID__c.field-meta.xml
<CustomField>
    <fullName>EA_EMAILID__c</fullName>
    <description>EA_EMAILID</description>
    <externalDeveloperName>EA_EMAILID</externalDeveloperName>
    <label>EA_EMAILID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>