LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EA_NAME__c.field-meta.xml
<CustomField>
    <fullName>EA_NAME__c</fullName>
    <description>EA_NAME</description>
    <externalDeveloperName>EA_NAME</externalDeveloperName>
    <label>EA_NAME</label>
    <length>80</length>
    <type>Text</type>
</CustomField>