LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EMAIL2__c.field-meta.xml
<CustomField>
    <fullName>EMAIL2__c</fullName>
    <description>EMAIL2</description>
    <externalDeveloperName>EMAIL2</externalDeveloperName>
    <label>EMAIL2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>