LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EMAIL3__c.field-meta.xml
<CustomField>
    <fullName>EMAIL3__c</fullName>
    <description>EMAIL3</description>
    <externalDeveloperName>EMAIL3</externalDeveloperName>
    <label>EMAIL3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>