LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EMAIL_ID__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ID__c</fullName>
    <description>EMAIL_ID</description>
    <externalDeveloperName>EMAIL_ID</externalDeveloperName>
    <label>EMAIL_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>