LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/EVENTNAME__c.field-meta.xml
<CustomField>
    <fullName>EVENTNAME__c</fullName>
    <description>EVENTNAME</description>
    <externalDeveloperName>EVENTNAME</externalDeveloperName>
    <label>EVENTNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>