LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/FAX_NO__c.field-meta.xml
<CustomField>
    <fullName>FAX_NO__c</fullName>
    <description>FAX_NO</description>
    <externalDeveloperName>FAX_NO</externalDeveloperName>
    <label>FAX_NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>