LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/FIRM_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>FIRM_COUNTRY__c</fullName>
    <description>FIRM_COUNTRY</description>
    <externalDeveloperName>FIRM_COUNTRY</externalDeveloperName>
    <label>FIRM_COUNTRY</label>
    <length>8</length>
    <type>Text</type>
</CustomField>