LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/FIRM_REF_PERSON__c.field-meta.xml
<CustomField>
    <fullName>FIRM_REF_PERSON__c</fullName>
    <description>FIRM_REF_PERSON</description>
    <externalDeveloperName>FIRM_REF_PERSON</externalDeveloperName>
    <label>FIRM_REF_PERSON</label>
    <length>8</length>
    <type>Text</type>
</CustomField>