LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/FIRM_RELATION__c.field-meta.xml
<CustomField>
    <fullName>FIRM_RELATION__c</fullName>
    <description>FIRM_RELATION</description>
    <externalDeveloperName>FIRM_RELATION</externalDeveloperName>
    <label>FIRM_RELATION</label>
    <length>50</length>
    <type>Text</type>
</CustomField>