LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/FIRST_CONTACT_DATE__c.field-meta.xml
<CustomField>
    <fullName>FIRST_CONTACT_DATE__c</fullName>
    <description>FIRST_CONTACT_DATE</description>
    <externalDeveloperName>FIRST_CONTACT_DATE</externalDeveloperName>
    <label>FIRST_CONTACT_DATE</label>
    <type>DateTime</type>
</CustomField>