LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_NAME__c</fullName>
    <description>FIRST_NAME</description>
    <externalDeveloperName>FIRST_NAME</externalDeveloperName>
    <label>FIRST_NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>