LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/INT_REF_FIRM_NAME__c.field-meta.xml
<CustomField>
    <fullName>INT_REF_FIRM_NAME__c</fullName>
    <description>INT_REF_FIRM_NAME</description>
    <externalDeveloperName>INT_REF_FIRM_NAME</externalDeveloperName>
    <label>INT_REF_FIRM_NAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>