LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_ADVISOR__c.field-meta.xml
<CustomField>
    <fullName>IS_ADVISOR__c</fullName>
    <description>IS_ADVISOR</description>
    <externalDeveloperName>IS_ADVISOR</externalDeveloperName>
    <label>IS_ADVISOR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>