LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_FIRM_REFERRAL__c.field-meta.xml
<CustomField>
    <fullName>IS_FIRM_REFERRAL__c</fullName>
    <description>IS_FIRM_REFERRAL</description>
    <externalDeveloperName>IS_FIRM_REFERRAL</externalDeveloperName>
    <label>IS_FIRM_REFERRAL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>