LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_IN_MAILING_LIST__c.field-meta.xml
<CustomField>
    <fullName>IS_IN_MAILING_LIST__c</fullName>
    <description>IS_IN_MAILING_LIST</description>
    <externalDeveloperName>IS_IN_MAILING_LIST</externalDeveloperName>
    <label>IS_IN_MAILING_LIST</label>
    <length>1</length>
    <type>Text</type>
</CustomField>