LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_MDCHIEF__c.field-meta.xml
<CustomField>
    <fullName>IS_MDCHIEF__c</fullName>
    <description>IS_MDCHIEF</description>
    <externalDeveloperName>IS_MDCHIEF</externalDeveloperName>
    <label>IS_MDCHIEF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>