LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_PRIMARY__c.field-meta.xml
<CustomField>
    <fullName>IS_PRIMARY__c</fullName>
    <description>IS_PRIMARY</description>
    <externalDeveloperName>IS_PRIMARY</externalDeveloperName>
    <label>IS_PRIMARY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>