LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_REFBY_FIRM_PERS__c.field-meta.xml
<CustomField>
    <fullName>IS_REFBY_FIRM_PERS__c</fullName>
    <description>IS_REFBY_FIRM_PERS</description>
    <externalDeveloperName>IS_REFBY_FIRM_PERS</externalDeveloperName>
    <label>IS_REFBY_FIRM_PERS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>