LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_SPEAKER__c.field-meta.xml
<CustomField>
    <fullName>IS_SPEAKER__c</fullName>
    <description>IS_SPEAKER</description>
    <externalDeveloperName>IS_SPEAKER</externalDeveloperName>
    <label>IS_SPEAKER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>