LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_TARGET__c.field-meta.xml
<CustomField>
    <fullName>IS_TARGET__c</fullName>
    <description>IS_TARGET</description>
    <externalDeveloperName>IS_TARGET</externalDeveloperName>
    <label>IS_TARGET</label>
    <length>1</length>
    <type>Text</type>
</CustomField>