LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/IS_UPLOAD__c.field-meta.xml
<CustomField>
    <fullName>IS_UPLOAD__c</fullName>
    <description>IS_UPLOAD</description>
    <externalDeveloperName>IS_UPLOAD</externalDeveloperName>
    <label>IS_UPLOAD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>