LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/LAND_LINE_NO__c.field-meta.xml
<CustomField>
    <fullName>LAND_LINE_NO__c</fullName>
    <description>LAND_LINE_NO</description>
    <externalDeveloperName>LAND_LINE_NO</externalDeveloperName>
    <label>LAND_LINE_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>