LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/LEGAL_ENTITY__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_ENTITY__c</fullName>
    <description>LEGAL_ENTITY</description>
    <externalDeveloperName>LEGAL_ENTITY</externalDeveloperName>
    <label>LEGAL_ENTITY</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>