LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/LEGAL_ENTITY_DISPLAY_INVOICE__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_ENTITY_DISPLAY_INVOICE__c</fullName>
    <description>LEGAL_ENTITY_DISPLAY_INVOICE</description>
    <externalDeveloperName>LEGAL_ENTITY_DISPLAY_INVOICE</externalDeveloperName>
    <label>LEGAL_ENTITY_DISPLAY_INVOICE</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>