LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/LINKEDINURL__c.field-meta.xml
<CustomField>
    <fullName>LINKEDINURL__c</fullName>
    <description>LINKEDINURL</description>
    <externalDeveloperName>LINKEDINURL</externalDeveloperName>
    <label>LINKEDINURL</label>
    <length>1111</length>
    <type>LongTextArea</type>
</CustomField>