LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/LST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LST_NAME__c</fullName>
    <description>LST_NAME</description>
    <externalDeveloperName>LST_NAME</externalDeveloperName>
    <label>LST_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>