LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/MEMBER_FIRM_OFFICE__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_FIRM_OFFICE__c</fullName>
    <description>MEMBER_FIRM_OFFICE</description>
    <externalDeveloperName>MEMBER_FIRM_OFFICE</externalDeveloperName>
    <label>MEMBER_FIRM_OFFICE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>