LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/MIDDLE_NAME__c.field-meta.xml
<CustomField>
    <fullName>MIDDLE_NAME__c</fullName>
    <description>MIDDLE_NAME</description>
    <externalDeveloperName>MIDDLE_NAME</externalDeveloperName>
    <label>MIDDLE_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>