LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/MOBILE_NO__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_NO__c</fullName>
    <description>MOBILE_NO</description>
    <externalDeveloperName>MOBILE_NO</externalDeveloperName>
    <label>MOBILE_NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>