LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/OFFICIAL_MAIL__c.field-meta.xml
<CustomField>
    <fullName>OFFICIAL_MAIL__c</fullName>
    <description>OFFICIAL_MAIL</description>
    <externalDeveloperName>OFFICIAL_MAIL</externalDeveloperName>
    <label>OFFICIAL_MAIL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>