LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/OTHER_LEAD_SRC_TEXT__c.field-meta.xml
<CustomField>
    <fullName>OTHER_LEAD_SRC_TEXT__c</fullName>
    <description>OTHER_LEAD_SRC_TEXT</description>
    <externalDeveloperName>OTHER_LEAD_SRC_TEXT</externalDeveloperName>
    <label>OTHER_LEAD_SRC_TEXT</label>
    <length>150</length>
    <type>Text</type>
</CustomField>