LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/PERSONAL_INTEREST__c.field-meta.xml
<CustomField>
    <fullName>PERSONAL_INTEREST__c</fullName>
    <description>PERSONAL_INTEREST</description>
    <externalDeveloperName>PERSONAL_INTEREST</externalDeveloperName>
    <label>PERSONAL_INTEREST</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>