LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <description>PIN</description>
    <externalDeveloperName>PIN</externalDeveloperName>
    <label>PIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>