LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/POS_INDIVIDUAL__c.field-meta.xml
<CustomField>
    <fullName>POS_INDIVIDUAL__c</fullName>
    <description>POS_INDIVIDUAL</description>
    <externalDeveloperName>POS_INDIVIDUAL</externalDeveloperName>
    <label>POS_INDIVIDUAL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>