LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/PREF_EMAIL_FORMAT__c.field-meta.xml
<CustomField>
    <fullName>PREF_EMAIL_FORMAT__c</fullName>
    <description>PREF_EMAIL_FORMAT</description>
    <externalDeveloperName>PREF_EMAIL_FORMAT</externalDeveloperName>
    <label>PREF_EMAIL_FORMAT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>