LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/PRIM_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>PRIM_INDUSTRY__c</fullName>
    <description>PRIM_INDUSTRY</description>
    <externalDeveloperName>PRIM_INDUSTRY</externalDeveloperName>
    <label>PRIM_INDUSTRY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>