LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/PROSPECT_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>PROSPECT_SOURCE__c</fullName>
    <description>PROSPECT_SOURCE</description>
    <externalDeveloperName>PROSPECT_SOURCE</externalDeveloperName>
    <label>PROSPECT_SOURCE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>