LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/REL_LEADER__c.field-meta.xml
<CustomField>
    <fullName>REL_LEADER__c</fullName>
    <description>REL_LEADER</description>
    <externalDeveloperName>REL_LEADER</externalDeveloperName>
    <label>REL_LEADER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>