LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/REL_OFFICE__c.field-meta.xml
<CustomField>
    <fullName>REL_OFFICE__c</fullName>
    <description>REL_OFFICE</description>
    <externalDeveloperName>REL_OFFICE</externalDeveloperName>
    <label>REL_OFFICE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>