LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/REL_STRENGTH__c.field-meta.xml
<CustomField>
    <fullName>REL_STRENGTH__c</fullName>
    <description>REL_STRENGTH</description>
    <externalDeveloperName>REL_STRENGTH</externalDeveloperName>
    <label>REL_STRENGTH</label>
    <length>8</length>
    <type>Text</type>
</CustomField>