LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/SKYPEID__c.field-meta.xml
<CustomField>
    <fullName>SKYPEID__c</fullName>
    <description>SKYPEID</description>
    <externalDeveloperName>SKYPEID</externalDeveloperName>
    <label>SKYPEID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>