LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/SPEAKER_TOPICS__c.field-meta.xml
<CustomField>
    <fullName>SPEAKER_TOPICS__c</fullName>
    <description>SPEAKER_TOPICS</description>
    <externalDeveloperName>SPEAKER_TOPICS</externalDeveloperName>
    <label>SPEAKER_TOPICS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>