LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <description>STATE</description>
    <externalDeveloperName>STATE</externalDeveloperName>
    <label>STATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>