LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>STATUS</description>
    <externalDeveloperName>STATUS</externalDeveloperName>
    <label>STATUS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>