LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/SUB_PRIM_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>SUB_PRIM_INDUSTRY__c</fullName>
    <description>SUB_PRIM_INDUSTRY</description>
    <externalDeveloperName>SUB_PRIM_INDUSTRY</externalDeveloperName>
    <label>SUB_PRIM_INDUSTRY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>