LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/SUBSCRIPT_PREF__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIPT_PREF__c</fullName>
    <description>SUBSCRIPT_PREF</description>
    <externalDeveloperName>SUBSCRIPT_PREF</externalDeveloperName>
    <label>SUBSCRIPT_PREF</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>