LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/TELE_NO2__c.field-meta.xml
<CustomField>
    <fullName>TELE_NO2__c</fullName>
    <description>TELE_NO2</description>
    <externalDeveloperName>TELE_NO2</externalDeveloperName>
    <label>TELE_NO2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>