LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/TL_MKTG_CATEGORIES__c.field-meta.xml
<CustomField>
    <fullName>TL_MKTG_CATEGORIES__c</fullName>
    <description>TL_MKTG_CATEGORIES</description>
    <externalDeveloperName>TL_MKTG_CATEGORIES</externalDeveloperName>
    <label>TL_MKTG_CATEGORIES</label>
    <length>250</length>
    <type>Text</type>
</CustomField>