LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/TYPE_OF_RELATION__c.field-meta.xml
<CustomField>
    <fullName>TYPE_OF_RELATION__c</fullName>
    <description>TYPE_OF_RELATION</description>
    <externalDeveloperName>TYPE_OF_RELATION</externalDeveloperName>
    <label>TYPE_OF_RELATION</label>
    <length>10</length>
    <type>Text</type>
</CustomField>