LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/WEB__c.field-meta.xml
<CustomField>
    <fullName>WEB__c</fullName>
    <description>WEB</description>
    <externalDeveloperName>WEB</externalDeveloperName>
    <label>WEB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>