LinKreta_POC_Repository/force-app/main/default/objects/GM_CLIENT_ADDR_DTL__x/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <description>ZIP</description>
    <externalDeveloperName>ZIP</externalDeveloperName>
    <label>ZIP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>